--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -55,12 +55,12 @@ button:hover {
   background: none;
   border: none;
   cursor: pointer;
-  color: #007BFF;
+  color: #707478;
   margin-left: 10px;
 }
 
 .edit-button:hover {
-  color: #0056b3;
+  color: #5a5e63;
 }
 
 .delete-button {
