--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Flask Notes{% endblock %}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
-<body>
+<body class="font-sans bg-gray-100 min-h-screen">
     {% include 'partials/header.html' %}
-    <div class="container">
-        {% block content %}{% endblock %}
+    <div class="container mx-auto max-w-screen-md p-4">
+        <div class="my-4">
+            {% block content %}{% endblock %}
+        </div>
     </div>
     {% include 'partials/footer.html' %}
     <script src="/static/js/script.js"></script>
