--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,15 +1,11 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Flask Notes</a>
-      <div class="collapse navbar-collapse">
-          <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                  <a class="nav-link" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/notes">Notes</a>
-              </li>
-          </ul>
-      </div>
-  </nav>
+    <nav class="bg-blue-500 p-4">
+        <div class="container mx-auto flex justify-between items-center">
+            <a class="text-blue-500 hover:text-gray-200" href="/">Flask Notes</a>
+            <ul class="flex space-x-4">
+                <li><a class="text-blue-500 hover:text-gray-200" href="/">Home</a></li>
+                <li><a class="text-blue-500 hover:text-gray-200" href="/notes">Notes</a></li>
+            </ul>
+        </div>
+    </nav>
 </header>
